--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,9 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "Gowershell"
 version = "0.0.1"
 dependencies = [
     "singleton-decorator",
     "loguru",
-    ""
 ]
 requires-python = ">=3.8"
 authors = [
@@ -22,3 +17,8 @@ keywords = []
 [project.urls]
 Repository = "https://github.com/genderlesspit/Gowershell"
 
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"*" = ["*.*"]
